# deva_transcript

./: .dockerignore  .env.example  .gitignore  Dockerfile.cpu  Dockerfile.nvidia  config.py  docker-compose.yml  pyproject.toml
finetuned_yolo_model/: args.yaml  events.out.tfevents.1748791053.e8bf43f70f64.644.0  results.csv
src/deva_transcript/: __main__.py  app.py  database.py  s3.py
src/deva_transcript/neural/: frames_extract.py  summary.py  transcribe.py  utils.py
