[project]
name = "deva-transcript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deva-p1-db",
    "faster-whisper>=1.1.1",
    "faststream[cli,rabbit]>=0.5.39",
    "ffmpeg-asyncio>=0.1.3",
    "ffmpeg-python>=0.2.0",
    "minio>=7.2.15",
    "openai>=1.75.0",
    "pydantic-settings>=2.8.1",
]

[tool.uv.sources]
deva-p1-db = { git = "https://github.com/w1vern/deva_p1_db" }

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["deva_transcript"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"